// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dispatch(redirect(action)): 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/redirected",
      "search": "",
      "url": "/redirected",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "REDIRECTED",
  },
]
`;

exports[`dispatch(redirect(action)): 1 - history_index 1`] = `0`;

exports[`dispatch(redirect(action)): 1 - response 1`] = `
Object {
  "payload": "redirect_complete",
  "type": "REDIRECTED_COMPLETE",
}
`;

exports[`dispatch(redirect(action)): 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`dispatch(redirect(action)): 1 - routes - REDIRECTED - onComplete 1`] = `1`;

exports[`dispatch(redirect(action)): 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/redirected",
          "search": "",
          "url": "/redirected",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "REDIRECTED",
      },
    ],
    "from": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "direction": "forward",
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "location": Object {
              "key": "345678",
              "pathname": "/first",
              "search": "",
              "url": "/first",
            },
            "params": Object {},
            "query": Object {},
            "state": Object {},
            "type": "FIRST",
          },
        ],
        "index": 0,
        "key": "345678",
        "kind": "load",
        "length": 1,
        "pathname": "/first",
        "pop": false,
        "scene": "",
        "search": "",
        "status": 200,
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "hash": "",
    "index": 0,
    "key": "345678",
    "kind": "replace",
    "length": 1,
    "params": Object {},
    "pathname": "/redirected",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "key": "",
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "ready": true,
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 302,
    "type": "REDIRECTED",
    "universal": false,
    "url": "/redirected",
  },
  "title": "REDIRECTED_COMPLETE - \\"redirect_complete\\"",
}
`;

exports[`dispatch(redirect(action)): 1 - title 1`] = `"REDIRECTED"`;

exports[`dispatch(redirect(action, status)): 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/redirected",
      "search": "",
      "url": "/redirected",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "REDIRECTED",
  },
]
`;

exports[`dispatch(redirect(action, status)): 1 - history_index 1`] = `0`;

exports[`dispatch(redirect(action, status)): 1 - response 1`] = `
Object {
  "payload": "redirect_complete",
  "type": "REDIRECTED_COMPLETE",
}
`;

exports[`dispatch(redirect(action, status)): 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`dispatch(redirect(action, status)): 1 - routes - REDIRECTED - onComplete 1`] = `1`;

exports[`dispatch(redirect(action, status)): 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/redirected",
          "search": "",
          "url": "/redirected",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "REDIRECTED",
      },
    ],
    "from": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "direction": "forward",
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "location": Object {
              "key": "345678",
              "pathname": "/first",
              "search": "",
              "url": "/first",
            },
            "params": Object {},
            "query": Object {},
            "state": Object {},
            "type": "FIRST",
          },
        ],
        "index": 0,
        "key": "345678",
        "kind": "load",
        "length": 1,
        "pathname": "/first",
        "pop": false,
        "scene": "",
        "search": "",
        "status": 200,
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "hash": "",
    "index": 0,
    "key": "345678",
    "kind": "replace",
    "length": 1,
    "params": Object {},
    "pathname": "/redirected",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "key": "",
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "ready": true,
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 301,
    "type": "REDIRECTED",
    "universal": false,
    "url": "/redirected",
  },
  "title": "REDIRECTED_COMPLETE - \\"redirect_complete\\"",
}
`;

exports[`dispatch(redirect(action, status)): 1 - title 1`] = `"REDIRECTED"`;

exports[`redirect within beforeEnter: 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/first",
      "search": "",
      "url": "/first",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "FIRST",
  },
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/redirected",
      "search": "",
      "url": "/redirected",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "REDIRECTED",
  },
]
`;

exports[`redirect within beforeEnter: 1 - history_index 1`] = `1`;

exports[`redirect within beforeEnter: 1 - response 1`] = `
Object {
  "payload": "redirect_complete",
  "type": "REDIRECTED_COMPLETE",
}
`;

exports[`redirect within beforeEnter: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`redirect within beforeEnter: 1 - routes - REDIRECTED - onComplete 1`] = `1`;

exports[`redirect within beforeEnter: 1 - routes - SECOND - beforeEnter 1`] = `1`;

exports[`redirect within beforeEnter: 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/redirected",
          "search": "",
          "url": "/redirected",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "REDIRECTED",
      },
    ],
    "from": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "direction": "forward",
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "location": Object {
              "key": "345678",
              "pathname": "/first",
              "search": "",
              "url": "/first",
            },
            "params": Object {},
            "query": Object {},
            "state": Object {},
            "type": "FIRST",
          },
          Object {
            "basename": "",
            "hash": "",
            "location": Object {
              "key": "345678",
              "pathname": "/second",
              "search": "",
              "url": "/second",
            },
            "params": Object {},
            "query": Object {},
            "state": Object {},
            "type": "SECOND",
          },
        ],
        "index": 1,
        "key": "345678",
        "kind": "push",
        "length": 2,
        "pathname": "/second",
        "pop": false,
        "scene": "",
        "search": "",
        "status": 200,
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "replace",
    "length": 2,
    "params": Object {},
    "pathname": "/redirected",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/first",
            "search": "",
            "url": "/first",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "FIRST",
        },
      ],
      "hash": "",
      "index": 0,
      "key": "345678",
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "ready": true,
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 301,
    "type": "REDIRECTED",
    "universal": false,
    "url": "/redirected",
  },
  "title": "REDIRECTED_COMPLETE - \\"redirect_complete\\"",
}
`;

exports[`redirect within beforeEnter: 1 - title 1`] = `"REDIRECTED"`;

exports[`redirect within thunk: 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/first",
      "search": "",
      "url": "/first",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "FIRST",
  },
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/redirected",
      "search": "",
      "url": "/redirected",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "REDIRECTED",
  },
]
`;

exports[`redirect within thunk: 1 - history_index 1`] = `1`;

exports[`redirect within thunk: 1 - response 1`] = `
Object {
  "payload": "redirect_complete",
  "type": "REDIRECTED_COMPLETE",
}
`;

exports[`redirect within thunk: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`redirect within thunk: 1 - routes - REDIRECTED - onComplete 1`] = `1`;

exports[`redirect within thunk: 1 - routes - SECOND - thunk 1`] = `1`;

exports[`redirect within thunk: 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/redirected",
          "search": "",
          "url": "/redirected",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "REDIRECTED",
      },
    ],
    "from": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "direction": "forward",
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "location": Object {
              "key": "345678",
              "pathname": "/first",
              "search": "",
              "url": "/first",
            },
            "params": Object {},
            "query": Object {},
            "state": Object {},
            "type": "FIRST",
          },
          Object {
            "basename": "",
            "hash": "",
            "location": Object {
              "key": "345678",
              "pathname": "/second",
              "search": "",
              "url": "/second",
            },
            "params": Object {},
            "query": Object {},
            "state": Object {},
            "type": "SECOND",
          },
        ],
        "index": 1,
        "key": "345678",
        "kind": "push",
        "length": 2,
        "pathname": "/second",
        "pop": false,
        "scene": "",
        "search": "",
        "status": 200,
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "replace",
    "length": 2,
    "params": Object {},
    "pathname": "/redirected",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/first",
            "search": "",
            "url": "/first",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "FIRST",
        },
      ],
      "hash": "",
      "index": 0,
      "key": "345678",
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "ready": true,
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 302,
    "type": "REDIRECTED",
    "universal": false,
    "url": "/redirected",
  },
  "title": "REDIRECTED_COMPLETE - \\"redirect_complete\\"",
}
`;

exports[`redirect within thunk: 1 - title 1`] = `"REDIRECTED"`;
